clusters/aks-dev/workloads/services/kubernetes-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    istio-injection: enabled
